math(EXPR BITS "8*${CMAKE_SIZEOF_VOID_P}")
if( ${BITS}  STREQUAL "64" )
set(FOLDER "x64")
message("-- 64 bits system")
else()
set(FOLDER "x86")
message("-- 32 bits system")
endif()
set(CAEN_LIBS "${CMAKE_SOURCE_DIR}/source/CAEN/lib")
configure_file(${CAEN_LIBS}/CAENComm-1.2/include/CAENComm.h ${CMAKE_SOURCE_DIR}/bin/include/CAEN/CAENComm.h COPYONLY)
configure_file(${CAEN_LIBS}/CAENComm-1.2/lib/${FOLDER}/libCAENComm.so.1.2.0 ${CMAKE_SOURCE_DIR}/bin/lib/libCAENComm.so COPYONLY)

configure_file(${CAEN_LIBS}/CAENVMELib-2.50/include/CAENVMElib.h ${CMAKE_SOURCE_DIR}/bin/include/CAEN/CAENVMElib.h COPYONLY)
configure_file(${CAEN_LIBS}/CAENVMELib-2.50/include/CAENVMEoslib.h ${CMAKE_SOURCE_DIR}/bin/include/CAEN/CAENVMEoslib.h COPYONLY)
configure_file(${CAEN_LIBS}/CAENVMELib-2.50/include/CAENVMEtypes.h ${CMAKE_SOURCE_DIR}/bin/include/CAEN/CAENVMEtypes.h COPYONLY)
configure_file(${CAEN_LIBS}/CAENVMELib-2.50/lib/${FOLDER}/libCAENVME.so.2.50 ${CMAKE_SOURCE_DIR}/bin/lib/libCAENVME.so COPYONLY)

configure_file(${CAEN_LIBS}/CAENHVWrapper-5.82/include/CAENHVWrapper.h ${CMAKE_SOURCE_DIR}/bin/include/CAEN/CAENHVWrapper.h COPYONLY)
if( ${BITS}  STREQUAL "64" ) 
configure_file(${CAEN_LIBS}/CAENHVWrapper-5.82/lib/${FOLDER}/libcaenhvwrapper.so.5.82 ${CMAKE_SOURCE_DIR}/bin/lib/libcaenhvwrapper.so COPYONLY)
else()
configure_file(${CAEN_LIBS}/CAENHVWrapper-5.82/lib/libcaenhvwrapper.so.5.82 ${CMAKE_SOURCE_DIR}/bin/lib/libcaenhvwrapper.so COPYONLY)
endif()

include_directories(${CMAKE_SOURCE_DIR}/bin/include ${CMAKE_SOURCE_DIR}/bin/include/CAEN)

add_executable(MainWrapp CAENHVWrapper-5.82/HVWrapperDemo/MainWrapp.c CAENHVWrapper-5.82/HVWrapperDemo/console.c CAENHVWrapper-5.82/HVWrapperDemo/CmdWrapp.c )
target_link_libraries (MainWrapp ${CMAKE_SOURCE_DIR}/bin/lib/libcaenhvwrapper.so pthread dl ncurses m )
install (TARGETS MainWrapp DESTINATION ${CMAKE_SOURCE_DIR}/bin)
